# sdl-game-ideas-and-work

./: .gitignore  CMakeLists.txt  LICENSE.TXT
src/: Main.cpp  eventmarshaller.hpp  generic_exception.hpp  graphics.cpp  graphics.hpp  graphics_threader.hpp  interp.hpp  matrix.hpp  panel.cpp  panel.hpp  program_status.hpp  rect.cpp  rect.hpp  renderer.cpp  renderer.hpp  sdl_window.cpp  sdl_window.hpp  terminal.cpp  terminal.hpp  texture.cpp  texture.hpp
