cmake_minimum_required(VERSION 3.7)

project(game-thing)
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${PROJECT_SOURCE_DIR}/cmake/Modules/")
set(CMAKE_BUILD_TYPE Debug)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
# find_package(LibAgar REQUIRED COMPONENTS core gui math sg vg)
# include_directories(${LibAgar_INCLUDE_DIRS})
# add_definitions(${LibAgar_DEFINITIONS})
# add_executable(game-thing-agar libagar-based/main.c)
# target_link_libraries(game-thing-agar ${LibAgar_LIBRARIES})
find_package(PkgConfig REQUIRED)
pkg_check_modules(VTERM REQUIRED vterm)
find_package(SDL2 REQUIRED)
find_package(SDL2_image REQUIRED)
find_package(SDL2TTF REQUIRED)
find_package(ICU 61.0 COMPONENTS uc i18n REQUIRED)
add_executable(game-thing src/Main.cpp src/sdl_window.cpp src/graphics.cpp src/renderer.cpp src/texture.cpp src/rect.cpp src/panel.cpp src/terminal.cpp)
target_include_directories(game-thing PUBLIC ${SDL2_INCLUDE_DIRS}  ${SDL2_IMAGE_INCLUDE_DIRS} ${SDL2TTF_INCLUDE_DIR} ${VTERM_INCLUDE_DIRS})
target_compile_options(game-thing PUBLIC ${SDL2_CFLAGS_OTHERS} ${SDL2_IMAGE_CFLAGS_OTHERS} ${SDL2TTF_CFLAGS_OTHERS} ${VTERM_CFLAGS_OTHERS})
target_link_libraries(game-thing ${SDL2_LIBRARIES} ${SDL2_IMAGE_LIBRARIES} ${SDL2TTF_LIBRARY} ${VTERM_LIBRARIES} ICU::uc ICU::i18n)